--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <div id="app">
-      <canvas id="gameCanvas"></canvas>
+      <div id="gameContainer">
+        <canvas id="gameCanvas"></canvas>
+      </div>
+      <div id="networkContainer">
+        <canvas id="networkCanvas"></canvas>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
