decision making through neural network

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app">
       <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
+        <button id="show-hide-button">Show/hide network visualization</button>
       </div>
       <div id="networkContainer">
         <canvas id="networkCanvas"></canvas>
