--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div id="app">
       <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
-        <button id="show-hide-button">Show/hide network visualization</button>
+        <button id="button-network">Show/hide network visualization</button>
+        <button id="button-sensors">Show/hide sensors</button>
       </div>
       <div id="networkContainer">
         <canvas id="networkCanvas"></canvas>
