option to play 1v1 with imported brain

--- a/index.html
+++ b/index.html
@@ -3,27 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/brain.svg" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Training Ground</title>
   </head>
   <body>
     <div id="app">
-      <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
-        <div id="button-space">
-          <button id="button-network">Show/hide network visualization</button>
-          <button id="button-sensors">Show/hide sensors</button>
-          <button id="button-save">Export best brain</button>
-          <div id="import">
-            <label for="file-selector">Import neaural network</label>
-            <input type="file" id="button-import" accept="text/plain">
-          </div>
-        </div>
-      </div>
-      <div id="networkContainer">
-        <canvas id="networkCanvas"></canvas>
+      <div id="menu">
+        <button id="button-play" onclick="window.location.href='./pages/game.html'">Play the game</button>
+        <button id="button-train" onclick="window.location.href='./pages/trainingGround.html'">Go to training ground</button>
       </div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
