no movement decision favored in enemy AI

--- a/pages/trainingGround.html
+++ b/pages/trainingGround.html
@@ -12,8 +12,8 @@
       <div id="training-container">
         <canvas id="game-canvas"></canvas>
         <div id="button-space">
-          <button id="button-network">Show/hide network visualization</button>
-          <button id="button-sensors">Show/hide sensors</button>
+          <button id="button-network">Toggle network visualization</button>
+          <button id="button-sensors">Toggle sensors</button>
           <button id="button-save">Export best brain</button>
           <div id="import-container">
             <label for="file-selector">Import neaural network</label>
