option to train without dummies

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <div id="menu">
         <button id="button-play" onclick="window.location.href='./pages/game.html'">Play the game</button>
-        <button id="button-train" onclick="window.location.href='./pages/trainingGround.html'">Go to training ground</button>
+        <button id="button-train" onclick="window.location.href='./pages/trainingSelection.html'">Go to training ground</button>
       </div>
     </div>
   </body>
