--- a/pages/trainingGround.html
+++ b/pages/trainingGround.html
@@ -16,7 +16,7 @@
           <button id="button-sensors">Toggle sensors</button>
           <button id="button-save">Export best brain</button>
           <div id="import-container">
-            <label for="file-selector">Import neaural network</label>
+            <label for="button-import">Import neaural network</label>
             <input type="file" id="button-import" accept="text/plain">
           </div>
         </div>
