--- a/pages/trainingGround.html
+++ b/pages/trainingGround.html
@@ -20,6 +20,19 @@
             <input type="file" id="button-import" accept="text/plain">
           </div>
         </div>
+
+        <div id="NEAT-controls">
+          <hr />
+          <div>
+            <p style="display: inline;">NEAT Controls</p>
+            <p id="species-number-info" style="margin: auto;">Selected species: 0</p>
+            <span style="margin-left: auto;">
+              <input type="checkbox" id="show-only-selected" />
+              <label for="show-only-selected">Show only selected species</label>
+            </span>
+          </div>
+          <div id="species-selection"></div>
+        </div>
       </div>
       <div id="network-container">
         <canvas id="network-canvas"></canvas>
