Revert "work on site position detection"
This reverts commit c2bf21635f52ba33062f2673b7a540e52d4de036.

--- a/pages/trainingGround.html
+++ b/pages/trainingGround.html
@@ -38,6 +38,6 @@
         <canvas id="network-canvas"></canvas>
       </div>
     </div>
-    <script type="module" src="/src/test.ts"></script>
+    <script type="module" src="/src/trainingGround.ts"></script>
   </body>
 </html>
