first evaluation scenario

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <div id="menu">
         <button id="button-play" onclick="window.location.href='./pages/game.html'">Play the game</button>
         <button id="button-train" onclick="window.location.href='./pages/trainingSelection.html'">Go to training ground</button>
+        <button id="button-train" onclick="window.location.href='./pages/evaluationSelection.html'">Evaluate neural network</button>
       </div>
     </div>
   </body>
