--- a/pages/evaluation.html
+++ b/pages/evaluation.html
@@ -15,6 +15,6 @@
       </div>
       <div id="training-container"></div>
     </div>
-    <script type="module" src="/src/game.ts"></script>
+    <script type="module" src="/src/evaluation/evaluation.ts"></script>
   </body>
 </html>
