training mode selection removed

--- a/pages/trainingSelection.html
+++ b/pages/trainingSelection.html
@@ -11,18 +11,7 @@
     <div id="app">
       <form id="training-selection" action="./trainingGround.html">
         <div>
-          <p>Training mode</p>
-          <input type="radio" id="mode-movement" name="mode" value="movement" checked />
-          <label for="mode-movement" >Movement only</label>
-
-          <input type="radio" id="mode-full" name="mode" value="full" />
-          <label for="mode-full" >Full training</label>
-        </div>
-
-        <br>
-
-        <div>
-          <p>Neuroevolution method</p>
+          <p>Choose neuroevolution method</p>
           <input type="radio" id="method-conventional" name="method" value="conventional" checked />
           <label for="method-conventional" >Conventional (static topology)</label>
 
