remaining evaluation scenarios

--- a/pages/evaluationSelection.html
+++ b/pages/evaluationSelection.html
@@ -32,6 +32,13 @@
           <label for="scenario-four" >Scenario 4: Winding corridor</label>
         </div>
 
+        <br>
+
+        <div>
+          <input type="checkbox" id="with-dummy" name="with-dummy" value="true" />
+          <label for="with-dummy">Include dummy player</label>
+        </div>
+
         <button type="submit">Begin</button>
       </form>
     </div>
