--- a/pages/trainingGround.html
+++ b/pages/trainingGround.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <div id="app">
+      <div id="timer-space">
+        <h1 id="timer"></h1>
+      </div>
       <div id="training-container">
         <canvas id="game-canvas"></canvas>
         <div id="button-space">
